feat: add user table and handlers
